--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
 <body>
   <nav>
     <a href="{{ '/' | relative_url }}">Home</a>
-    <a href="{{ '/about.md' | relative_url }}">About</a>
+    <a href="{{ '/about.html' | relative_url }}">About</a>
   </nav>
 
   <main>
