--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,9 @@
   <nav>
     <a href="{{ '/' | relative_url }}">Home</a>
     <a href="{{ '/about.md' | relative_url }}">About</a>
+    <a href="{{ '/projects.md' | relative_url }}">Projects</a>
+    <a href="{{ '/contact.md' | relative_url }}">Contact</a>
+
   </nav>
 
   <main>
