--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,9 +33,9 @@
 <body>
   <nav>
     <a href="{{ '/' | relative_url }}">Home</a>
-    <a href="{{ '/About' | relative_url }}">About</a>
-    <a href="{{ '/Projects' | relative_url }}">Projects</a>
-    <a href="{{ '/Contact' | relative_url }}">Contact</a>
+    <a href="{{ '/about' | relative_url }}">About the lab</a>
+    <a href="{{ '/projects' | relative_url }}">Projects</a>
+    <a href="{{ '/contact' | relative_url }}">Contact</a>
   </nav>
 
   <main>
