--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
 <body>
   <nav>
     <a href="{{ '/' | relative_url }}">Home</a>
-    <a href="{{ '/about' | relative_url }}">About the lab</a>
+    <a href="/about">About</a>
     <a href="{{ '/projects' | relative_url }}">Projects</a>
     <a href="{{ '/contact' | relative_url }}">Contact</a>
   </nav>
