--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,7 @@
     <a href="{{ '/' | relative_url }}">Home</a>
     <a href="{{ '/about' | relative_url }}">About</a>
     <a href="{{ '/projects' | relative_url }}">Projects</a>
+    <a href="{{ '/publications' | relative_url }}">Publications</a>
     <a href="{{ '/contact' | relative_url }}">Contact</a>
   </nav>
 
